--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,3 +65,27 @@ jobs:
         run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
       - name: Run tests
         run: swift test --enable-test-discovery --enable-code-coverage | xcpretty
+  build-ventura:
+    strategy:
+      matrix:
+        xcode:
+          - '14.3.1'
+    runs-on: macos-13
+    steps:
+      - uses: actions/checkout@v2
+      - name: Select Xcode ${{ matrix.xcode }}
+        run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
+      - name: Run Build
+        run: swift build
+  unit_test-ventura:
+    strategy:
+      matrix:
+        xcode:    
+          - '14.3.1'     
+    runs-on: macos-13
+    steps:
+      - uses: actions/checkout@v2
+      - name: Select Xcode ${{ matrix.xcode }}
+        run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
+      - name: Run tests
+        run: swift test --enable-test-discovery --enable-code-coverage | xcpretty
