--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
       matrix:
         xcode:
           - '14.3.1'
+          - '15.2'
     runs-on: macos-13
     steps:
       - uses: actions/checkout@v2
@@ -58,7 +59,34 @@ jobs:
       matrix:
         xcode:    
           - '14.3.1'     
+          - '15.2'
     runs-on: macos-13
+    steps:
+      - uses: actions/checkout@v2
+      - name: Select Xcode ${{ matrix.xcode }}
+        run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
+      - name: Run tests
+        run: swift test --enable-test-discovery --enable-code-coverage | xcpretty
+  build-sonoma:
+    strategy:
+      matrix:
+        xcode:
+          - '15.4'
+          - '16.1'
+    runs-on: macos-14-arm64
+    steps:
+      - uses: actions/checkout@v2
+      - name: Select Xcode ${{ matrix.xcode }}
+        run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
+      - name: Run Build
+        run: swift build
+  unit_test-sonoma:
+    strategy:
+      matrix:
+        xcode:    
+          - '15.4'
+          - '16.1'
+    runs-on: macos-14-arm64
     steps:
       - uses: actions/checkout@v2
       - name: Select Xcode ${{ matrix.xcode }}
