--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
         xcode:
           - '15.4'
           - '16.1'
-    runs-on: macos-14-arm64
+    runs-on: macos-14
     steps:
       - uses: actions/checkout@v2
       - name: Select Xcode ${{ matrix.xcode }}
@@ -86,7 +86,7 @@ jobs:
         xcode:    
           - '15.4'
           - '16.1'
-    runs-on: macos-14-arm64
+    runs-on: macos-14
     steps:
       - uses: actions/checkout@v2
       - name: Select Xcode ${{ matrix.xcode }}
