--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,36 +9,16 @@ on:
       - '*'
 
 jobs:
-  build-monterey:
-    strategy:
-      matrix:
-        xcode:
-          - '13.1'
-          - '13.2.1'
-          - '13.3.1'
-          - '13.4.1'    
-          - '14.0'         
-    runs-on: macos-12
+  build-latest:
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Select Xcode ${{ matrix.xcode }}
-        run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
       - name: Run Build
         run: swift build
-  unit_test-monterey:
-    strategy:
-      matrix:
-        xcode:
-          - '13.1'
-          - '13.2.1'
-          - '13.3.1'
-          - '13.4.1'    
-          - '14.0'     
-    runs-on: macos-12
+  unit_test-latest:
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Select Xcode ${{ matrix.xcode }}
-        run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
       - name: Run tests
         run: swift test --enable-test-discovery --enable-code-coverage | xcpretty
   build-ventura:
