--- a/.github/workflows/podspec.yml
+++ b/.github/workflows/podspec.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   linting:      
-    runs-on: macos-12
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - name: Install Cocoapods
